tests/e2e/semantics/assignment_object_index_invalid.error
Error: syntax error in story at line 2, column 1

2|    a.b = 100
      ^

E0100: Can't assign `int` to `string`
