tests/e2e/semantics/assignment_object_index_invalid.story
a = {"foo": "1"}
a.b = 100
